Add registration flow and world map view
Introduces a secure registration page with client-side password analysis and Google reCAPTCHA v3 integration. Adds a world map page displaying 1000 simulated European sensors with status summaries. Updates navigation, translations, and dependencies to support new features.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,6 +5,7 @@
   "notifications": "Notifications",
   "reports": "Community Reports",
   "profile": "Profile",
+  "world_map": "World map",
   "theme": "Theme",
   "language": "Language",
   "system": "System",
@@ -64,5 +65,62 @@
   "auth_session": "Session",
   "username": "Username",
   "email": "Email",
-  "name": "Full name"
+  "name": "Full name",
+  "register_title": "Create an account",
+  "register_description": "Strengthen access to Argus Portal with a verified identity. Complete the form to provision a secure account.",
+  "register_full_name": "Full name",
+  "register_email": "Work email",
+  "register_invalid_email": "Enter a valid email address.",
+  "register_password": "Password",
+  "register_confirm_password": "Confirm password",
+  "register_show": "Show",
+  "register_hide": "Hide",
+  "register_strength": "Strength: {{value}}",
+  "register_strength_weak": "Weak",
+  "register_strength_fair": "Fair",
+  "register_strength_good": "Good",
+  "register_strength_strong": "Strong",
+  "register_strength_excellent": "Excellent",
+  "register_requirement_length": "At least 12 characters",
+  "register_requirement_upper": "One uppercase letter",
+  "register_requirement_lower": "One lowercase letter",
+  "register_requirement_number": "One number",
+  "register_requirement_symbol": "One special symbol",
+  "register_requirement_spaces": "No spaces",
+  "register_requirement_email": "Does not contain email",
+  "register_requirement_repeats": "No repeated characters",
+  "register_password_mismatch": "Passwords must match.",
+  "register_policy_title": "I accept the security policy",
+  "register_policy_text": "Registration requires adherence to the Acceptable Use Policy and multi-factor authentication on first login.",
+  "register_security_hint": "Your password will be hashed client-side before transmission to the identity provider.",
+  "register_cta": "Create account",
+  "register_submitting": "Creating account...",
+  "register_fix_errors": "Resolve the highlighted issues before continuing.",
+  "register_success": "Request submitted. Check your inbox to verify the account.",
+  "register_generic_error": "Registration failed. Try again or contact an administrator.",
+  "register_nav": "Register",
+  "register_recaptcha_ready": "reCAPTCHA v3 protection is active.",
+  "register_recaptcha_loading": "Initialising reCAPTCHA...",
+  "register_recaptcha_failed": "Unable to verify reCAPTCHA. Try again in a few seconds.",
+  "register_recaptcha_unavailable": "reCAPTCHA is still loading. Refresh the page if the issue persists.",
+  "register_recaptcha_disabled": "reCAPTCHA is not configured. Set VITE_RECAPTCHA_SITE_KEY to enable registration.",
+  "world_map_total": "Sensors",
+  "world_map_active_network": "Deployed in Europe",
+  "world_map_online": "Online",
+  "world_map_online_hint": "Broadcasting telemetry",
+  "world_map_offline": "Offline",
+  "world_map_offline_hint": "Awaiting reconnection",
+  "world_map_maintenance": "Maintenance",
+  "world_map_maintenance_hint": "Scheduled work",
+  "world_map_title": "Environmental coverage",
+  "world_map_description": "Circles represent the nearest node for each European cluster.",
+  "world_map_updated": "Updated",
+  "world_map_status_online": "Online",
+  "world_map_status_offline": "Offline",
+  "world_map_status_maintenance": "Maintenance",
+  "metric_AQI": "Air Quality Index",
+  "metric_PM2.5": "PM2.5 particulate",
+  "metric_Radiation": "Gamma radiation",
+  "metric_Water": "Water quality",
+  "metric_Noise": "Acoustic level"
 }
