--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -5,6 +5,7 @@
   "notifications": "Сповіщення",
   "reports": "Community Reports",
   "profile": "Профіль",
+  "world_map": "Карта світу",
   "theme": "Тема",
   "language": "Мова",
   "system": "Система",
@@ -64,5 +65,62 @@
   "auth_session": "Сесія",
   "username": "Ім'я користувача",
   "email": "Email",
-  "name": "Повне ім'я"
+  "name": "Повне ім'я",
+  "register_title": "Створити обліковий запис",
+  "register_description": "Забезпечте безпечний доступ до Argus Portal. Заповніть форму, щоб зареєструвати обліковий запис.",
+  "register_full_name": "ПІБ",
+  "register_email": "Робочий email",
+  "register_invalid_email": "Вкажіть коректну адресу електронної пошти.",
+  "register_password": "Пароль",
+  "register_confirm_password": "Підтвердіть пароль",
+  "register_show": "Показати",
+  "register_hide": "Приховати",
+  "register_strength": "Складність: {{value}}",
+  "register_strength_weak": "Слабкий",
+  "register_strength_fair": "Посередній",
+  "register_strength_good": "Добрий",
+  "register_strength_strong": "Надійний",
+  "register_strength_excellent": "Відмінний",
+  "register_requirement_length": "Щонайменше 12 символів",
+  "register_requirement_upper": "Одна велика літера",
+  "register_requirement_lower": "Одна мала літера",
+  "register_requirement_number": "Одна цифра",
+  "register_requirement_symbol": "Один спецсимвол",
+  "register_requirement_spaces": "Без пробілів",
+  "register_requirement_email": "Не містить email",
+  "register_requirement_repeats": "Без повторюваних символів",
+  "register_password_mismatch": "Паролі повинні збігатися.",
+  "register_policy_title": "Погоджуюся з політикою безпеки",
+  "register_policy_text": "Реєстрація передбачає дотримання політики використання та ввімкнення MFA при першому вході.",
+  "register_security_hint": "Перед відправленням пароль буде захешовано на клієнті.",
+  "register_cta": "Створити обліковий запис",
+  "register_submitting": "Створення облікового запису...",
+  "register_fix_errors": "Усуньте помилки у формі перед продовженням.",
+  "register_success": "Запит відправлено. Перевірте пошту для підтвердження.",
+  "register_generic_error": "Помилка під час реєстрації. Спробуйте ще раз або зверніться до адміністратора.",
+  "register_nav": "Реєстрація",
+  "register_recaptcha_ready": "reCAPTCHA v3 активна.",
+  "register_recaptcha_loading": "Ініціалізація reCAPTCHA...",
+  "register_recaptcha_failed": "Не вдалося підтвердити reCAPTCHA. Спробуйте знову пізніше.",
+  "register_recaptcha_unavailable": "reCAPTCHA ще завантажується. Оновіть сторінку, якщо проблема не зникла.",
+  "register_recaptcha_disabled": "reCAPTCHA не налаштована. Вкажіть VITE_RECAPTCHA_SITE_KEY, щоб увімкнути реєстрацію.",
+  "world_map_total": "Датчики",
+  "world_map_active_network": "Розгорнуті в Європі",
+  "world_map_online": "Онлайн",
+  "world_map_online_hint": "Передають телеметрію",
+  "world_map_offline": "Офлайн",
+  "world_map_offline_hint": "Очікують підключення",
+  "world_map_maintenance": "Обслуговування",
+  "world_map_maintenance_hint": "Планові роботи",
+  "world_map_title": "Охоплення довкілля",
+  "world_map_description": "Кола позначають найближчий вузол кожного європейського кластера.",
+  "world_map_updated": "Оновлено",
+  "world_map_status_online": "Онлайн",
+  "world_map_status_offline": "Офлайн",
+  "world_map_status_maintenance": "Обслуговування",
+  "metric_AQI": "Індекс якості повітря",
+  "metric_PM2.5": "PM2.5",
+  "metric_Radiation": "Гамма-випромінювання",
+  "metric_Water": "Якість води",
+  "metric_Noise": "Рівень шуму"
 }
