Add Fastify backend for synthetic world map devices
Introduces a new server workspace with a Fastify-based backend that streams hundreds of thousands of synthetic devices for the world map. Updates documentation, scripts, and world map component to support backend integration and viewport change events.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -115,6 +115,9 @@
   "world_map_title": "Environmental coverage",
   "world_map_description": "Circles represent the nearest node for each European cluster.",
   "world_map_updated": "Updated",
+  "world_map_loading": "Loading devices…",
+  "world_map_error": "Unable to load devices. Check backend availability.",
+  "world_map_visible": "{{formattedCount}} devices in view",
   "world_map_status_online": "Online",
   "world_map_status_offline": "Offline",
   "world_map_status_maintenance": "Maintenance",
