--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -115,6 +115,9 @@
   "world_map_title": "Охоплення довкілля",
   "world_map_description": "Кола позначають найближчий вузол кожного європейського кластера.",
   "world_map_updated": "Оновлено",
+  "world_map_loading": "Завантаження пристроїв…",
+  "world_map_error": "Не вдалося завантажити пристрої. Перевірте бекенд.",
+  "world_map_visible": "На карті {{formattedCount}} пристроїв",
   "world_map_status_online": "Онлайн",
   "world_map_status_offline": "Офлайн",
   "world_map_status_maintenance": "Обслуговування",
