Refactor dashboard structure and add new charts
Reorganized dashboard pages and components, replacing legacy chart and map files with new forecast, compare, and metric sparkline charts. Updated navigation, sidebar, and header to reflect new structure and added app logo component. Enhanced map components for theme support and sensor/incident display. Added hooks for compare, forecast, and notifications data, and updated i18n files. Updated README with screenshots and basemap provider details.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,16 +1,21 @@
 {
   "app_name": "Argus Portal",
+  "app_tagline": "Real-time environmental intelligence",
   "dashboard": "Dashboard",
-  "devices": "Devices",
+  "forecast": "Forecast",
+  "compare": "Compare",
   "notifications": "Notifications",
-  "reports": "Community Reports",
+  "reports": "Reports",
   "profile": "Profile",
-  "world_map": "World map",
   "theme": "Theme",
   "language": "Language",
   "system": "System",
   "light": "Light",
   "dark": "Dark",
+  "status": "Status",
+  "login": "Log in",
+  "logout": "Log out",
+  "metric": "Metric",
   "metric_aqi": "AQI",
   "metric_noise": "Noise",
   "metric_radiation": "Radiation",
@@ -19,46 +24,17 @@
   "metric_units_noise": "dB",
   "metric_units_radiation": "µSv/h",
   "metric_units_water": "pH",
-  "recent_aqi": "Recent AQI",
-  "devices_total": "Devices",
-  "status": "Status",
-  "status_all": "All statuses",
-  "status_online": "Online",
-  "status_offline": "Offline",
-  "status_maintenance": "Maintenance",
-  "filter": "Filter",
-  "search_devices": "Search devices",
-  "add_device": "Add device",
-  "serial": "Serial number",
-  "secret": "Secret",
-  "add": "Add",
-  "cancel": "Cancel",
-  "login": "Log in",
-  "logout": "Log out",
-  "notifications_empty": "No notifications",
-  "notifications_recent": "Recent notifications",
-  "severity_critical": "Critical",
-  "severity_warning": "Warning",
-  "severity_info": "Info",
-  "profile_theme": "Theme",
-  "profile_language": "Language",
-  "profile_keycloak_title": "Keycloak integration",
-  "profile_keycloak_description": "Single sign-on with Keycloak protects access to Argus Portal.",
-  "profile_keycloak_placeholder": "User data unavailable. Set KEYCLOAK_URL and REALM to connect.",
-  "profile_preferences": "Preferences",
+  "metric_status_good": "Good",
+  "metric_status_moderate": "Moderate",
+  "metric_status_alert": "Alert",
+  "metric_AQI": "Air Quality Index",
+  "metric_PM2_5": "PM2.5 particulate",
+  "metric_Radiation": "Gamma radiation",
+  "metric_Water": "Water quality",
+  "metric_Noise": "Acoustic level",
   "map_title": "Environmental map",
   "last_updated": "Last updated {{value}}",
-  "view_all": "View all",
-  "refresh": "Refresh",
-  "device_serial": "Serial",
-  "device_secret": "Secret",
-  "table_device": "Device",
-  "table_location": "Location",
-  "table_last_seen": "Last seen",
-  "table_status": "Status",
-  "table_actions": "Actions",
-  "save": "Save",
-  "apply": "Apply",
+  "loading": "Loading…",
   "auth_loading": "Verifying session...",
   "auth_not_configured": "Keycloak is not configured. Set VITE_KEYCLOAK_URL, VITE_KEYCLOAK_REALM, and VITE_KEYCLOAK_CLIENT_ID.",
   "auth_not_authenticated": "You are not signed in.",
@@ -104,26 +80,151 @@
   "register_recaptcha_failed": "Unable to verify reCAPTCHA. Try again in a few seconds.",
   "register_recaptcha_unavailable": "reCAPTCHA is still loading. Refresh the page if the issue persists.",
   "register_recaptcha_disabled": "reCAPTCHA is not configured. Set VITE_RECAPTCHA_SITE_KEY to enable registration.",
-  "world_map_total": "Sensors",
-  "world_map_active_network": "Deployed in Europe",
-  "world_map_online": "Online",
-  "world_map_online_hint": "Broadcasting telemetry",
-  "world_map_offline": "Offline",
-  "world_map_offline_hint": "Awaiting reconnection",
-  "world_map_maintenance": "Maintenance",
-  "world_map_maintenance_hint": "Scheduled work",
-  "world_map_title": "Environmental coverage",
-  "world_map_description": "Circles represent the nearest node for each European cluster.",
-  "world_map_updated": "Updated",
-  "world_map_loading": "Loading devices…",
-  "world_map_error": "Unable to load devices. Check backend availability.",
-  "world_map_visible": "{{formattedCount}} devices in view",
-  "world_map_status_online": "Online",
-  "world_map_status_offline": "Offline",
-  "world_map_status_maintenance": "Maintenance",
-  "metric_AQI": "Air Quality Index",
-  "metric_PM2_5": "PM2.5 particulate",
-  "metric_Radiation": "Gamma radiation",
-  "metric_Water": "Water quality",
-  "metric_Noise": "Acoustic level"
+  "dashboard_pending_data": "Awaiting live data…",
+  "dashboard_sensor_total": "{{count}} sensors",
+  "dashboard_loading_map": "Loading map…",
+  "dashboard_live_title": "Live metrics",
+  "dashboard_live_description": "Continuous readings from the edge network every 5 minutes.",
+  "dashboard_map_legend_heading": "AQI distribution",
+  "aqi_range_good": "0 – 50 AQI",
+  "aqi_range_moderate": "51 – 100 AQI",
+  "dashboard_aqi_trend_title": "Air quality trend",
+  "dashboard_aqi_trend_description": "Recent AQI values with adaptive smoothing.",
+  "dashboard_insights_title": "Insights",
+  "dashboard_insights_description": "Data-driven highlights for the last refresh.",
+  "dashboard_insights_expand": "Show more insights",
+  "dashboard_insights_collapse": "Hide insights",
+  "dashboard_insight_metric_status": "{{metric}} is currently {{status}}.",
+  "dashboard_insight_delta_positive": "Increasing by {{value}} {{unit}} compared to earlier readings.",
+  "dashboard_insight_delta_negative": "Improving by {{value}} {{unit}} compared to earlier readings.",
+  "dashboard_insight_delta_neutral": "Stable over the last update window.",
+  "dashboard_insight_all_clear_title": "Air quality is stable",
+  "dashboard_insight_all_clear_description": "No alerts detected across the monitored metrics in the last hour.",
+  "forecast_aqi_title": "72h AQI outlook",
+  "forecast_aqi_description": "Hourly forecast with confidence intervals based on ensemble modelling.",
+  "forecast_loading": "Forecast data is loading…",
+  "forecast_recommendation_title": "Recommendation now",
+  "forecast_recommendation_description": "Guidance considers dominant pollutant, risk level, and hourly trend.",
+  "forecast_now": "Now",
+  "forecast_recommendation_now": "{{level}} exposure expected. Adjust plans accordingly.",
+  "forecast_level_low": "Low risk",
+  "forecast_level_moderate": "Moderate risk",
+  "forecast_level_high": "High risk",
+  "forecast_delta_stable": "Stable",
+  "forecast_delta_positive": "+{{value}} next 24h",
+  "forecast_delta_negative": "-{{value}} next 24h",
+  "forecast_stat_dominant": "Dominant pollutant",
+  "forecast_stat_dominant_hint": "Primary contributor to the projected AQI.",
+  "forecast_stat_change": "24h change",
+  "forecast_stat_change_hint": "Expected delta against the current hour.",
+  "forecast_stat_change_up": "+{{value}} points",
+  "forecast_stat_change_down": "-{{value}} points",
+  "forecast_stat_peak": "Peak AQI",
+  "forecast_stat_peak_hint": "Highest expected AQI at {{time}}.",
+  "forecast_advice_low": [
+    "Enjoy outdoor activities and natural ventilation.",
+    "Track sensitive groups with optional alerts only."
+  ],
+  "forecast_advice_moderate": [
+    "Plan outdoor work earlier in the day.",
+    "Enable alerts for at-risk groups and adjust traffic flows."
+  ],
+  "forecast_advice_high": [
+    "Limit outdoor exposure for sensitive groups.",
+    "Communicate mitigation steps to local responders."
+  ],
+  "compare_panel_left": "Location A",
+  "compare_panel_right": "Location B",
+  "compare_panel_description": "Select a sensor cluster to compare.",
+  "compare_select_placeholder": "Choose location",
+  "compare_type_station": "Station",
+  "compare_type_district": "District",
+  "compare_type_unknown": "Offline",
+  "compare_trend_title": "24h comparison",
+  "compare_trend_description": "Overlay of hourly readings for each metric.",
+  "compare_chart_empty": "Select two locations to render the comparison.",
+  "compare_export_csv": "Export CSV",
+  "compare_export_png": "Export PNG",
+  "compare_exporting_csv": "Preparing CSV…",
+  "compare_exporting_png": "Preparing PNG…",
+  "compare_loading": "Loading…",
+  "compare_table_title": "Metric breakdown",
+  "compare_table_description": "Values reflect the latest reading for each location.",
+  "compare_difference": "Difference",
+  "compare_advantage": "Advantage",
+  "compare_advantage_equal": "Balanced",
+  "compare_location_a": "Location A",
+  "compare_location_b": "Location B",
+  "notifications_recent": "Recent notifications",
+  "notifications_overview_description": "Automated alerts from monitored assets.",
+  "notifications_empty": "No notifications",
+  "notifications_unread_badge": "{{count}} unread",
+  "notifications_mark_all": "Mark all as read",
+  "notifications_marking": "Marking…",
+  "notifications_hint": "Critical alerts trigger SMS escalation automatically.",
+  "notifications_time": "{{value}}",
+  "notifications_unread": "Unread",
+  "severity_critical": "Critical",
+  "severity_warning": "Warning",
+  "severity_info": "Info",
+  "notification_radiation_spike_title": "Radiation spike detected",
+  "notification_radiation_spike_message": "Station CH-21 observed 0.26 µSv/h — above safe baseline.",
+  "notification_noise_warning_title": "Noise threshold exceeded",
+  "notification_noise_warning_message": "Industrial sensor DN-04 reported continuous 82 dB for 30 minutes.",
+  "notification_water_quality_title": "Water quality variance",
+  "notification_water_quality_message": "Dissolved oxygen dropped near Podil pier. Verify sensor calibration.",
+  "notification_network_sync_title": "Network synced",
+  "notification_network_sync_message": "All nodes acknowledged the latest firmware patch.",
+  "notification_aqi_improving_title": "AQI returning to baseline",
+  "notification_aqi_improving_message": "Obolon cluster improved by 12 points in the last hour.",
+  "reports_title": "Environmental reports",
+  "reports_description": "Community signals from Hestia integration preview.",
+  "reports_filter_type": "Type",
+  "reports_filter_status": "Status",
+  "reports_filter_all_types": "All types",
+  "reports_filter_all_status": "All statuses",
+  "reports_loading": "Loading reports…",
+  "reports_empty_state": "No incidents match the current filters.",
+  "reports_view_details": "Details",
+  "reports_reported_at": "Reported {{value}}",
+  "reports_status_open": "Open",
+  "reports_status_investigating": "Investigating",
+  "reports_status_resolved": "Resolved",
+  "reports_type_dumping": "Illegal dumping",
+  "reports_type_water": "Water pollution",
+  "reports_type_air": "Air quality",
+  "reports_type_radiation": "Radiation",
+  "reports_type_badge_illegal_dumping": "Illegal dumping",
+  "reports_type_badge_water_pollution": "Water pollution",
+  "reports_type_badge_air_quality": "Air quality",
+  "reports_type_badge_radiation": "Radiation",
+  "reports_dumping_pechersk_title": "Illegal dumping in Pechersk",
+  "reports_dumping_pechersk_description": "Heavy construction waste spotted near an urban floodplain. Satellite imagery confirms the pile has doubled in the last 48 hours.",
+  "reports_water_dnipro_title": "Dnipro water anomaly",
+  "reports_water_dnipro_description": "Elevated conductivity detected close to industrial docks. Possible coolant discharge.",
+  "reports_air_kharkiv_title": "Industrial plume in Kharkiv",
+  "reports_air_kharkiv_description": "NO₂ readings climbed above 80 ppb during night shift. Inspect scrubber performance.",
+  "reports_radiation_chernobyl_title": "Radiation check at exclusion zone",
+  "reports_radiation_chernobyl_description": "Periodic survey recorded a short-term spike near checkpoint Delta. Team confirmed return to baseline.",
+  "reports_dumping_odessa_title": "Dumping along Odesa coast",
+  "reports_dumping_odessa_description": "Organic waste washed onto the shoreline after night-time unloading. Local NGO provided photos.",
+  "reports_water_lviv_title": "Water discoloration upstream of Lviv",
+  "reports_water_lviv_description": "Residents noted orange tint after upstream rainfall. Labs requested additional samples.",
+  "profile_overview_title": "Account overview",
+  "profile_overview_description": "Keycloak-backed single sign-on profile.",
+  "profile_status_offline": "Integration offline",
+  "profile_status_connected": "Connected",
+  "profile_status_disconnected": "Awaiting login",
+  "profile_auth_hint": "Sign in to sync preferences and manage secure exports.",
+  "profile_preferences": "Preferences",
+  "profile_preferences_hint": "Choose appearance and localisation options.",
+  "profile_keycloak_title": "Keycloak integration",
+  "profile_keycloak_description": "Single sign-on with Keycloak protects access to Argus Portal.",
+  "profile_keycloak_placeholder": "User data unavailable. Set KEYCLOAK_URL and REALM to connect.",
+  "save": "Save",
+  "cancel": "Cancel",
+  "add": "Add",
+  "filter": "Filter",
+  "view_all": "View all",
+  "refresh": "Refresh"
 }
