--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -1,16 +1,21 @@
 {
   "app_name": "Argus Portal",
+  "app_tagline": "Екологічна аналітика в реальному часі",
   "dashboard": "Панель",
-  "devices": "Пристрої",
+  "forecast": "Прогноз",
+  "compare": "Порівняння",
   "notifications": "Сповіщення",
-  "reports": "Community Reports",
+  "reports": "Звіти",
   "profile": "Профіль",
-  "world_map": "Карта світу",
   "theme": "Тема",
   "language": "Мова",
   "system": "Система",
   "light": "Світла",
   "dark": "Темна",
+  "status": "Статус",
+  "login": "Увійти",
+  "logout": "Вийти",
+  "metric": "Показник",
   "metric_aqi": "AQI",
   "metric_noise": "Шум",
   "metric_radiation": "Радіація",
@@ -19,46 +24,17 @@
   "metric_units_noise": "дБ",
   "metric_units_radiation": "мкЗв/год",
   "metric_units_water": "pH",
-  "recent_aqi": "Останній AQI",
-  "devices_total": "Пристрої",
-  "status": "Статус",
-  "status_all": "Всі статуси",
-  "status_online": "Онлайн",
-  "status_offline": "Офлайн",
-  "status_maintenance": "Обслуговування",
-  "filter": "Фільтр",
-  "search_devices": "Пошук пристроїв",
-  "add_device": "Додати пристрій",
-  "serial": "Серійний номер",
-  "secret": "Секрет",
-  "add": "Додати",
-  "cancel": "Скасувати",
-  "login": "Увійти",
-  "logout": "Вийти",
-  "notifications_empty": "Немає сповіщень",
-  "notifications_recent": "Останні сповіщення",
-  "severity_critical": "Критично",
-  "severity_warning": "Попередження",
-  "severity_info": "Інформація",
-  "profile_theme": "Тема",
-  "profile_language": "Мова",
-  "profile_keycloak_title": "Інтеграція з Keycloak",
-  "profile_keycloak_description": "Керування доступом через Keycloak захищає Argus Portal.",
-  "profile_keycloak_placeholder": "Дані користувача недоступні. Вкажіть KEYCLOAK_URL та REALM для підключення.",
-  "profile_preferences": "Налаштування",
+  "metric_status_good": "Добре",
+  "metric_status_moderate": "Помірно",
+  "metric_status_alert": "Увага",
+  "metric_AQI": "Індекс якості повітря",
+  "metric_PM2_5": "PM2.5",
+  "metric_Radiation": "Гамма-випромінювання",
+  "metric_Water": "Якість води",
+  "metric_Noise": "Рівень шуму",
   "map_title": "Карта довкілля",
   "last_updated": "Останнє оновлення {{value}}",
-  "view_all": "Переглянути всі",
-  "refresh": "Оновити",
-  "device_serial": "Серійний номер",
-  "device_secret": "Секрет",
-  "table_device": "Пристрій",
-  "table_location": "Локація",
-  "table_last_seen": "Востаннє",
-  "table_status": "Статус",
-  "table_actions": "Дії",
-  "save": "Зберегти",
-  "apply": "Застосувати",
+  "loading": "Завантаження…",
   "auth_loading": "Перевірка сесії...",
   "auth_not_configured": "Keycloak не налаштований. Вкажіть VITE_KEYCLOAK_URL, VITE_KEYCLOAK_REALM та VITE_KEYCLOAK_CLIENT_ID.",
   "auth_not_authenticated": "Ви не ввійшли в систему.",
@@ -92,7 +68,7 @@
   "register_password_mismatch": "Паролі повинні збігатися.",
   "register_policy_title": "Погоджуюся з політикою безпеки",
   "register_policy_text": "Реєстрація передбачає дотримання політики використання та ввімкнення MFA при першому вході.",
-  "register_security_hint": "Перед відправленням пароль буде захешовано на клієнті.",
+  "register_security_hint": "Перед надсиланням пароль буде захешовано на клієнті.",
   "register_cta": "Створити обліковий запис",
   "register_submitting": "Створення облікового запису...",
   "register_fix_errors": "Усуньте помилки у формі перед продовженням.",
@@ -104,26 +80,151 @@
   "register_recaptcha_failed": "Не вдалося підтвердити reCAPTCHA. Спробуйте знову пізніше.",
   "register_recaptcha_unavailable": "reCAPTCHA ще завантажується. Оновіть сторінку, якщо проблема не зникла.",
   "register_recaptcha_disabled": "reCAPTCHA не налаштована. Вкажіть VITE_RECAPTCHA_SITE_KEY, щоб увімкнути реєстрацію.",
-  "world_map_total": "Датчики",
-  "world_map_active_network": "Розгорнуті в Європі",
-  "world_map_online": "Онлайн",
-  "world_map_online_hint": "Передають телеметрію",
-  "world_map_offline": "Офлайн",
-  "world_map_offline_hint": "Очікують підключення",
-  "world_map_maintenance": "Обслуговування",
-  "world_map_maintenance_hint": "Планові роботи",
-  "world_map_title": "Охоплення довкілля",
-  "world_map_description": "Кола позначають найближчий вузол кожного європейського кластера.",
-  "world_map_updated": "Оновлено",
-  "world_map_loading": "Завантаження пристроїв…",
-  "world_map_error": "Не вдалося завантажити пристрої. Перевірте бекенд.",
-  "world_map_visible": "На карті {{formattedCount}} пристроїв",
-  "world_map_status_online": "Онлайн",
-  "world_map_status_offline": "Офлайн",
-  "world_map_status_maintenance": "Обслуговування",
-  "metric_AQI": "Індекс якості повітря",
-  "metric_PM2_5": "PM2.5",
-  "metric_Radiation": "Гамма-випромінювання",
-  "metric_Water": "Якість води",
-  "metric_Noise": "Рівень шуму"
+  "dashboard_pending_data": "Очікуємо живі дані…",
+  "dashboard_sensor_total": "{{count}} датчиків",
+  "dashboard_loading_map": "Завантаження карти…",
+  "dashboard_live_title": "Поточні показники",
+  "dashboard_live_description": "Безперервні вимірювання з мережі датчиків кожні 5 хвилин.",
+  "dashboard_map_legend_heading": "Розподіл AQI",
+  "aqi_range_good": "0 – 50 AQI",
+  "aqi_range_moderate": "51 – 100 AQI",
+  "dashboard_aqi_trend_title": "Динаміка AQI",
+  "dashboard_aqi_trend_description": "Нещодавні значення AQI з адаптивним згладжуванням.",
+  "dashboard_insights_title": "Інсайти",
+  "dashboard_insights_description": "Ключові зміни за останнє оновлення.",
+  "dashboard_insights_expand": "Показати більше інсайтів",
+  "dashboard_insights_collapse": "Згорнути інсайти",
+  "dashboard_insight_metric_status": "{{metric}} наразі {{status}}.",
+  "dashboard_insight_delta_positive": "Зростає на {{value}} {{unit}} порівняно з попередніми даними.",
+  "dashboard_insight_delta_negative": "Покращилося на {{value}} {{unit}} порівняно з попередніми даними.",
+  "dashboard_insight_delta_neutral": "Показник залишається стабільним.",
+  "dashboard_insight_all_clear_title": "Показники в нормі",
+  "dashboard_insight_all_clear_description": "За останню годину не виявлено тривожних змін.",
+  "forecast_aqi_title": "Прогноз AQI на 72 години",
+  "forecast_aqi_description": "Погодинний прогноз з довірчими інтервалами.",
+  "forecast_loading": "Завантаження прогнозу…",
+  "forecast_recommendation_title": "Рекомендація зараз",
+  "forecast_recommendation_description": "Поради з урахуванням рівня ризику та домінуючого забруднювача.",
+  "forecast_now": "Зараз",
+  "forecast_recommendation_now": "{{level}} вплив очікується. Відкоригуйте плани.",
+  "forecast_level_low": "Низький ризик",
+  "forecast_level_moderate": "Помірний ризик",
+  "forecast_level_high": "Високий ризик",
+  "forecast_delta_stable": "Стабільно",
+  "forecast_delta_positive": "+{{value}} за 24 год",
+  "forecast_delta_negative": "-{{value}} за 24 год",
+  "forecast_stat_dominant": "Домінуючий забруднювач",
+  "forecast_stat_dominant_hint": "Основне джерело зростання AQI.",
+  "forecast_stat_change": "Зміна за 24 год",
+  "forecast_stat_change_hint": "Очікувана різниця проти поточного показника.",
+  "forecast_stat_change_up": "+{{value}} пунктів",
+  "forecast_stat_change_down": "-{{value}} пунктів",
+  "forecast_stat_peak": "Пік AQI",
+  "forecast_stat_peak_hint": "Найвищий прогнозований AQI о {{time}}.",
+  "forecast_advice_low": [
+    "Плануйте активності на відкритому повітрі без обмежень.",
+    "У разі потреби залишайте базові сповіщення для чутливих груп."
+  ],
+  "forecast_advice_moderate": [
+    "Переносьте активні роботи на ранок або вечір.",
+    "Увімкніть сповіщення для вразливих груп та скоригуйте транспорт."
+  ],
+  "forecast_advice_high": [
+    "Обмежте перебування назовні для чутливих груп.",
+    "Проінформуйте місцеві служби про додаткові заходи."
+  ],
+  "compare_panel_left": "Локація A",
+  "compare_panel_right": "Локація B",
+  "compare_panel_description": "Оберіть кластер датчиків для порівняння.",
+  "compare_select_placeholder": "Оберіть локацію",
+  "compare_type_station": "Станція",
+  "compare_type_district": "Район",
+  "compare_type_unknown": "Поза мережею",
+  "compare_trend_title": "Порівняння за 24 години",
+  "compare_trend_description": "Накладені графіки для кожного показника.",
+  "compare_chart_empty": "Оберіть дві локації, щоб побудувати графік.",
+  "compare_export_csv": "Експорт CSV",
+  "compare_export_png": "Експорт PNG",
+  "compare_exporting_csv": "Готуємо CSV…",
+  "compare_exporting_png": "Готуємо PNG…",
+  "compare_loading": "Завантаження…",
+  "compare_table_title": "Порівняння показників",
+  "compare_table_description": "Відображено останні значення для кожної локації.",
+  "compare_difference": "Різниця",
+  "compare_advantage": "Перевага",
+  "compare_advantage_equal": "Баланс",
+  "compare_location_a": "Локація A",
+  "compare_location_b": "Локація B",
+  "notifications_recent": "Останні сповіщення",
+  "notifications_overview_description": "Автоматичні попередження з мережі датчиків.",
+  "notifications_empty": "Сповіщень немає",
+  "notifications_unread_badge": "{{count}} непрочитаних",
+  "notifications_mark_all": "Позначити всі як прочитані",
+  "notifications_marking": "Позначаємо…",
+  "notifications_hint": "Критичні події дублюються через SMS-ескалацію.",
+  "notifications_time": "{{value}}",
+  "notifications_unread": "Непрочитано",
+  "severity_critical": "Критично",
+  "severity_warning": "Попередження",
+  "severity_info": "Інформація",
+  "notification_radiation_spike_title": "Фіксуємо стрибок радіації",
+  "notification_radiation_spike_message": "Станція CH-21 зафіксувала 0.26 мкЗв/год — вище порогового рівня.",
+  "notification_noise_warning_title": "Перевищення шуму",
+  "notification_noise_warning_message": "Індустріальний датчик DN-04 протягом 30 хвилин показує понад 82 дБ.",
+  "notification_water_quality_title": "Зміна якості води",
+  "notification_water_quality_message": "Поблизу Подолу знижено рівень розчиненого кисню. Перевірте калібрування.",
+  "notification_network_sync_title": "Мережу синхронізовано",
+  "notification_network_sync_message": "Усі вузли отримали останнє оновлення прошивки.",
+  "notification_aqi_improving_title": "AQI повертається до норми",
+  "notification_aqi_improving_message": "Кластер Оболонь покращився на 12 пунктів за останню годину.",
+  "reports_title": "Екологічні звіти",
+  "reports_description": "Попередній перегляд інтеграції з Hestia.",
+  "reports_filter_type": "Тип",
+  "reports_filter_status": "Статус",
+  "reports_filter_all_types": "Усі типи",
+  "reports_filter_all_status": "Усі статуси",
+  "reports_loading": "Завантаження звітів…",
+  "reports_empty_state": "За поточними фільтрами інцидентів не знайдено.",
+  "reports_view_details": "Деталі",
+  "reports_reported_at": "Зафіксовано {{value}}",
+  "reports_status_open": "Відкрито",
+  "reports_status_investigating": "В роботі",
+  "reports_status_resolved": "Закрито",
+  "reports_type_dumping": "Незаконне сміття",
+  "reports_type_water": "Забруднення води",
+  "reports_type_air": "Якість повітря",
+  "reports_type_radiation": "Радіація",
+  "reports_type_badge_illegal_dumping": "Незаконне сміття",
+  "reports_type_badge_water_pollution": "Забруднення води",
+  "reports_type_badge_air_quality": "Якість повітря",
+  "reports_type_badge_radiation": "Радіація",
+  "reports_dumping_pechersk_title": "Незаконне сміття у Печерську",
+  "reports_dumping_pechersk_description": "Будівельні відходи у заплаві стрімко зростають. Супутникові фото підтверджують подвоєння за 48 годин.",
+  "reports_water_dnipro_title": "Аномалія води у Дніпрі",
+  "reports_water_dnipro_description": "Підвищена електропровідність біля промислових доків. Можливий скид охолоджуючої рідини.",
+  "reports_air_kharkiv_title": "Промисловий дим у Харкові",
+  "reports_air_kharkiv_description": "Рівень NO₂ вночі сягнув 80 ppb. Перевірте стан газоочисників.",
+  "reports_radiation_chernobyl_title": "Перевірка радіації в зоні відчуження",
+  "reports_radiation_chernobyl_description": "Під час обходу зафіксовано короткочасний сплеск біля КПП «Дельта». Показники повернулися до норми.",
+  "reports_dumping_odessa_title": "Сміття на узбережжі Одеси",
+  "reports_dumping_odessa_description": "Вночі на берег винесло органічні відходи. Місцеві екоактивісти надали фото.",
+  "reports_water_lviv_title": "Забарвлення води вище Львова",
+  "reports_water_lviv_description": "Після дощу мешканці помітили помаранчевий відтінок. Лабораторії запитали додаткові проби.",
+  "profile_overview_title": "Профіль облікового запису",
+  "profile_overview_description": "Профіль єдиної автентифікації Keycloak.",
+  "profile_status_offline": "Інтеграцію вимкнено",
+  "profile_status_connected": "Підключено",
+  "profile_status_disconnected": "Очікує входу",
+  "profile_auth_hint": "Увійдіть, щоб синхронізувати налаштування та керувати експортом.",
+  "profile_preferences": "Налаштування",
+  "profile_preferences_hint": "Оберіть вигляд та мовні параметри.",
+  "profile_keycloak_title": "Інтеграція з Keycloak",
+  "profile_keycloak_description": "Керування доступом через Keycloak захищає Argus Portal.",
+  "profile_keycloak_placeholder": "Дані користувача недоступні. Вкажіть KEYCLOAK_URL та REALM для підключення.",
+  "save": "Зберегти",
+  "cancel": "Скасувати",
+  "add": "Додати",
+  "filter": "Фільтр",
+  "view_all": "Переглянути всі",
+  "refresh": "Оновити"
 }
