Remove water metric and update dashboard charts
Eliminates the water metric from dashboard, comparison, notifications, and translations. Adds a new EnvironmentTrendChart for multi-metric trends (AQI, noise, radiation) and updates the dashboard legend to be generated from sensor data instead of a static JSON file.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -19,11 +19,9 @@
   "metric_aqi": "AQI",
   "metric_noise": "Noise",
   "metric_radiation": "Radiation",
-  "metric_water": "Water",
   "metric_units_aqi": "US AQI",
   "metric_units_noise": "dB",
   "metric_units_radiation": "µSv/h",
-  "metric_units_water": "pH",
   "metric_status_good": "Good",
   "metric_status_moderate": "Moderate",
   "metric_status_alert": "Alert",
@@ -88,8 +86,8 @@
   "dashboard_map_legend_heading": "AQI distribution",
   "aqi_range_good": "0 – 50 AQI",
   "aqi_range_moderate": "51 – 100 AQI",
-  "dashboard_aqi_trend_title": "Air quality trend",
-  "dashboard_aqi_trend_description": "Recent AQI values with adaptive smoothing.",
+  "dashboard_environment_trend_title": "Environmental dynamics",
+  "dashboard_environment_trend_description": "Multi-metric trend for AQI, noise, and radiation.",
   "dashboard_insights_title": "Insights",
   "dashboard_insights_description": "Data-driven highlights for the last refresh.",
   "dashboard_insights_expand": "Show more insights",
