--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -19,11 +19,9 @@
   "metric_aqi": "AQI",
   "metric_noise": "Шум",
   "metric_radiation": "Радіація",
-  "metric_water": "Вода",
   "metric_units_aqi": "US AQI",
   "metric_units_noise": "дБ",
   "metric_units_radiation": "мкЗв/год",
-  "metric_units_water": "pH",
   "metric_status_good": "Добре",
   "metric_status_moderate": "Помірно",
   "metric_status_alert": "Увага",
@@ -88,8 +86,8 @@
   "dashboard_map_legend_heading": "Розподіл AQI",
   "aqi_range_good": "0 – 50 AQI",
   "aqi_range_moderate": "51 – 100 AQI",
-  "dashboard_aqi_trend_title": "Динаміка AQI",
-  "dashboard_aqi_trend_description": "Нещодавні значення AQI з адаптивним згладжуванням.",
+  "dashboard_environment_trend_title": "Динаміка показників",
+  "dashboard_environment_trend_description": "Порівняльні тренди AQI, шуму та радіації.",
   "dashboard_insights_title": "Інсайти",
   "dashboard_insights_description": "Ключові зміни за останнє оновлення.",
   "dashboard_insights_expand": "Показати більше інсайтів",
